--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf8" />
 <meta name="viewport" content="width=device-width, user-scalable=0" />
-<title>PewPew</title>
+<title>PewPew (DEBUG)</title>
 <style>
     html,
     body {
