--- a/play/game.html
+++ b/play/game.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf8" />
 <meta name="viewport" content="width=device-width, user-scalable=0" />
-<title>GoodLuck (opt)</title>
+<title>PewPew</title>
 <link rel="stylesheet" href="game.css" />
-<canvas id="scene"></canvas>
-<canvas id="billboard"></canvas>
-<main></main>
+<canvas></canvas>
 <script src="game.terser.js"></script>
