--- a/index.html
+++ b/index.html
@@ -54,18 +54,17 @@
         const DEBUG = true;
     </script>
     <script type="module">
-        import {loop_start, loop_stop} from "./src/loop.js";
-        import "./src/index.js";
+        import {game} from "./browser/index.js";
 
         let running = true;
         window.toggle = function toggle(button) {
             if (running) {
                 running = false;
-                loop_stop();
+                game.Stop();
                 button.textContent = "resume";
             } else {
                 running = true;
-                loop_start(game);
+                game.Start();
                 button.textContent = "pause";
             }
         };
